add Express Franchises section

--- a/index.html
+++ b/index.html
@@ -92,24 +92,24 @@
         </div>
         <!-- franchise one image div -->
         <div class="franchise-image-one">
-          <img src="images/franchise one.webp" alt=""/>
+          <img src="images/franchise one.webp" alt="" />
         </div>
         <!-- franchise one image div end -->
       </div>
 
-
-       <!-- franchise section three -->
+      <!-- franchise section three -->
       <div class="franchise-section-three">
         <!-- franchise two image div -->
         <div class="franchise-image-three">
-          <img src="images/franchise two.webp" alt=""/>
+          <img src="images/franchise two.webp" alt="" />
         </div>
         <!-- franchise two image div end -->
         <div class="section-three-content">
           <p class="islamabad">FAISALABAD</p>
-          <p class="section-three-content-para"> 
-            <span class="section-three-font">Salt'n Pepper</span> Restaurant</p>
-          
+          <p class="section-three-content-para">
+            <span class="section-three-font">Salt'n Pepper</span> Restaurant
+          </p>
+
           <p class="section-three-content-contact">
             4-Kohinoor City, Faisalabad
             <br />
@@ -125,15 +125,107 @@
           </p>
           <p class="section-four-content-contact">
             D.C Chowk, opposite Commissioner House, Bahawalpur
-          <br>
+            <br />
             Ph: 062-2740271-2
           </p>
         </div>
         <!-- franchise three image div -->
         <div class="franchise-image-four">
-          <img src="images/franchise three.webp" alt=""/>
+          <img src="images/franchise three.webp" alt="" />
         </div>
         <!-- franchise three image div end -->
+      </div>
+    </div>
+    <!-- franchises section start -->
+    <div class="franchises-section">
+      <div class="franchises-heading">
+        <p class="franchises-heading-font">Salt'n Pepper</p>
+        <p>Express Franchises</p>
+      </div>
+      <!-- franchises section one -->
+      <div class="franchise-container-one">
+        <div class="package-mall">
+          <img src="images/package mall.webp" alt="" />
+          <p class="package-mall-head">PACKAGES MALL</p>
+          <p class="express">
+            <span class="package-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="package-mall-contact">
+            First Floor Packages Mall
+            <br />
+            Ph: 0333-0310534
+          </p>
+          <button>Get Directions</button>
+        </div>
+        <div class="emporium-mall">
+          <img src="images/emporium mall.webp" alt="" />
+          <p class="emporium-mall-head">EMPORIUM MALL</p>
+          <p class="express">
+            <span class="emporium-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="emporium-mall-contact">
+            2nd Floor, Food Court Emporium Mall
+            <br />
+            Ph: 0311-1100947
+          </p>
+          <button>Get Directions</button>
+        </div>
+        <div class="gujranwala-mall">
+          <img src="images/gujranwala.webp" alt="" />
+          <p class="gujranwala-mall-head">GUJRANWALA</p>
+          <p class="express">
+            <span class="gujranwala-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="gujranwala-mall-contact">
+            Sixteenth Avenue Mall
+            <br />
+            Ph: 0300 6024000
+          </p>
+          <button>Get Directions</button>
+        </div>
+      </div>
+      <!-- franchises section two -->
+
+      <div class="franchise-container-one">
+        <div class="package-mall">
+          <img src="images/sargodha.webp" alt="" />
+          <p class="package-mall-head">SARGODHA</p>
+          <p class="express">
+            <span class="package-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="package-mall-contact">
+            First Floor Packages Mall
+            <br />
+            Ph: 0333-0310534
+          </p>
+          <button>Get Directions</button>
+        </div>
+        <div class="emporium-mall">
+          <img src="images/jhelum.webp" alt="" />
+          <p class="emporium-mall-head">JHELUM</p>
+          <p class="express">
+            <span class="emporium-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="emporium-mall-contact">
+            2nd Floor, Food Court Emporium Mall
+            <br />
+            Ph: 0311-1100947
+          </p>
+          <button>Get Directions</button>
+        </div>
+        <div class="gujranwala-mall">
+          <img src="images/faisaltown.webp" alt="" />
+          <p class="gujranwala-mall-head">FAISAL TOWN</p>
+          <p class="express">
+            <span class="gujranwala-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="gujranwala-mall-contact">
+            Sixteenth Avenue Mall
+            <br />
+            Ph: 0300 6024000
+          </p>
+          <button>Get Directions</button>
+        </div>
       </div>
     </div>
   </body>
