Add franchises section

--- a/index.html
+++ b/index.html
@@ -227,6 +227,49 @@
           <button>Get Directions</button>
         </div>
       </div>
+      <!-- franchises section three -->
+       
+      <div class="franchise-container-one">
+        <div class="package-mall">
+          <img src="images/sargodha.webp" alt="" />
+          <p class="package-mall-head">DHA</p>
+          <p class="express">
+            <span class="package-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="package-mall-contact">
+            First Floor Packages Mall
+            <br />
+            Ph: 0333-0310534
+          </p>
+          <button>Get Directions</button>
+        </div>
+        <div class="emporium-mall">
+          <img src="images/jhelum.webp" alt="" />
+          <p class="emporium-mall-head">BAHRIA TOWN</p>
+          <p class="express">
+            <span class="emporium-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="emporium-mall-contact">
+            2nd Floor, Food Court Emporium Mall
+            <br />
+            Ph: 0311-1100947
+          </p>
+          <button>Get Directions</button>
+        </div>
+        <div class="gujranwala-mall">
+          <img src="images/faisaltown.webp" alt="" />
+          <p class="gujranwala-mall-head">GUJAR KHAN</p>
+          <p class="express">
+            <span class="gujranwala-mall-font"> Salt'n Pepper</span> Express
+          </p>
+          <p class="gujranwala-mall-contact">
+            Sixteenth Avenue Mall
+            <br />
+            Ph: 0300 6024000
+          </p>
+          <button>Get Directions</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
