Add express franchise section and footer

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>
       </div>
       <!-- franchises section three -->
-       
+
       <div class="franchise-container-one">
         <div class="package-mall">
           <img src="images/sargodha.webp" alt="" />
@@ -271,5 +271,187 @@
         </div>
       </div>
     </div>
+    <!-- village franchise section -->
+    <div class="village-Franchise-section">
+      <div class="village-franchise-head">
+        <p class="village-franchise-head-font">Salt'n Pepper</p>
+        <p>Village Franchise</p>
+      </div>
+
+      <div class="village-Franchise-content">
+        <div class="village-Franchise-img">
+          <img src="images/village-franchise-img.webp" alt="" />
+        </div>
+        <div class="village-Franchise-text">
+          <p class="village-franchise-gujranwala">GUJRANWALA</p>
+          <p class="express">
+            <span class="gujranwala-mall-font"> Salt'n Pepper</span> Village
+          </p>
+          <p class="gujranwala-mall-contact">
+            Adjacent to Rida Marquees /DHA Main Gate, GT Road Gujranwala Cantt
+            <br />
+            Ph: 055-3884500 l ,055-3880400
+          </p>
+          <button>Get Direction</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- card section -->
+    <div class="Express-Franchises-section">
+      <div class="Express-Franchise-heading">
+        <p class="Express-Franchise-heading-font">Salt'n Pepper</p>
+        <p>Express Franchises <span class="Opening">(Opening Soon)</span></p>
+      </div>
+      <div class="Express-Franchise-section-one">
+        <div class="card-one">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span>Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+        <div class="card-two">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span> Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+        <div class="card-three">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span>Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+      </div>
+      <div class="Express-Franchise-section-one">
+        <div class="card-one">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span>Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+        <div class="card-two">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span> Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+        <div class="card-three">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span>Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+      </div>
+      <div class="Express-Franchise-section-one">
+        <div class="card-one">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span>Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+        <div class="card-two">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span> Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+        <div class="card-three">
+          <img class="location" src="images/location.webp" alt="" />
+          <p class="Opening-soon">Opening soon</p>
+          <p class="Express-Franchise-section-font">
+            Salt'n Pepper <span>Express</span>
+          </p>
+          <p>Al-Jalil Garden</p>
+          Sadhoke
+        </div>
+      </div>
+      <div class="social-feed">
+                 <p>Social Feed</p>
+                 <div class="social-feed-images">
+                   <img src="images/social feed 1.webp" alt="">
+                   <img src="images/social feed 2.webp" alt="">
+                   <img src="images/social feed 3.webp" alt="">
+                   <img src="images/social feed 4.webp" alt="">
+                   <img src="images/social feed 5.webp" alt="">
+                 </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-left">
+        <img src="images/logo.webp" alt="">
+        <p>The Salt’n Pepper Restaurants are an example of  <br>
+          gracious dinning, outstanding service, extraordinary <br>
+           classic and contemporary cuisine. The restaurants <br>
+            have become the ultimate dinning destinations in <br>
+             Lahore. From family occasions to business dinner  <br>
+             and moments of the heart, this place is where <br>
+              unforgettable memories are made.</p>
+              <br><br>
+              <p>Terms & conditions Privacy policy</p>
+      </div>
+      <div class="footer-center1">
+        <h3>Site links</h3>
+        <br>
+        <p>Home</p>
+        <p>About us</p>
+        <p>Publications</p>
+        <p>Get a franchises</p>
+        <p>Feedback</p>
+      </div>
+
+
+      <div class="footer-center2">
+            <h3>contact us</h3>
+            <p>+92 42 358 509 31 (Head Office)</p>
+            <p>+92 42 358 509 30 (Head Office)</p>
+            <p>+92 42 111 100 678 (Delivery)</p>
+            <p>+92 03 111 444 610 (Delivery)</p>
+            <p>snpfood@brain.net.pk</p>
+            <p>23-Usman Block, New <br>
+               GardenTown, Lahore, Pakistan</p>
+      </div>
+      <div class="footer-right">
+            <h3>Follow Us</h3>
+            <a href="https://www.facebook.com/TheSaltnPepperRestaurants/"><img src="images/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/saltnpepper_official/"><img src="images/insta.png" alt=""></a>
+            <a href="https://twitter.com/snprestaurant"><img src="images/twitter.png" alt=""></a>
+            <br><br>
+            <img class="googleplay" src="images/googleplay.png" alt="">
+      </div>
+         <div class="last-footer">
+              <div class="right">
+                &#169; 2023 Salt'n Pepper Restaurant.
+              </div>
+              <div class="left">
+                Powered Bytossdown.com
+              </div>
+         </div>
+
+    </footer>
   </body>
 </html>
